feat: semester 서비스, 컨트롤러의 반환 형식 entity로 통일
