# apps/admin-backend/src/semester/semester.controller.ts
@@ -11,23 +11,28 @@ import {
 import { SemesterService } from "./semester.service";
 import { CreateSemesterDto } from "./dto/create-semester.dto";
 import { UpdateSemesterDto } from "./dto/update-semester.dto";
+import { SemesterEntity } from "./entities/semester.entity";
 
 @Controller("semester")
 export class SemesterController {
   constructor(private semesterService: SemesterService) {}
 
   @Get()
-  getAllSemester() {
+  getAllSemester(): Promise<SemesterEntity[]> {
     return this.semesterService.getAllSemesters();
   }
 
   @Get(":id")
-  findSemesterById(@Param("id", ParseIntPipe) id: number) {
+  findSemesterById(
+    @Param("id", ParseIntPipe) id: number,
+  ): Promise<SemesterEntity> {
     return this.semesterService.findSemesterById(id);
   }
 
   @Post()
-  createSemester(@Body() createSemesterDto: CreateSemesterDto) {
+  createSemester(
+    @Body() createSemesterDto: CreateSemesterDto,
+  ): Promise<SemesterEntity> {
     return this.semesterService.createSemester(createSemesterDto);
   }
 
@@ -35,12 +40,14 @@ export class SemesterController {
   updateSemester(
     @Param("id", ParseIntPipe) id: number,
     @Body() updateSemesterDto: UpdateSemesterDto,
-  ) {
+  ): Promise<SemesterEntity> {
     return this.semesterService.updateSemester(id, updateSemesterDto);
   }
 
   @Delete("/:id")
-  deleteSemester(@Param("id", ParseIntPipe) id: number) {
+  deleteSemester(
+    @Param("id", ParseIntPipe) id: number,
+  ): Promise<SemesterEntity> {
     return this.semesterService.removeSemester(id);
   }
 }
